# needle-minder

./: .easignore  .gitignore  AGENTS.md  CLAUDE.md  README.md  app.json  babel.config.js  eas.json  eslint.config.js  jest.config.js  metro.config.js  package-lock.json  package.json  tsconfig.json
.claude/: settings.local.json
__tests__/: InventoryNotesEditor.test.tsx  KeyboardAwareBody.test.tsx  KeyboardAwareFormScreen.test.tsx  SearchFieldRow.test.tsx  SkeinBall.test.tsx  ThreadConditionPill.test.tsx  backupEnvelope.test.ts  catalogBrowse.test.ts  catalogFilter.test.ts  catalogValidation.test.ts  createId.test.ts  databaseSeed.test.ts  detailScreenNoteEditing.test.tsx  inventoryService.test.ts  keyboardAwareInventoryScreens.test.tsx  mergedInventoryView.test.ts  ocrParser.test.ts  pillStyles.test.ts  preferencesRepository.test.ts  projectMath.test.ts  projectScreens.test.tsx  projectService.test.ts  projectThreadSelection.test.ts  projectThreadsScreen.test.tsx  referenceCatalogFixture.test.ts  referenceColorRepository.test.ts  scanResolution.test.ts
app/: _layout.tsx  add.tsx  index.tsx  scan.tsx  settings.tsx
tools/thread-puller/: README.md  pyproject.toml
tools/thread-puller/configs/: dmc-pearl-cotton-5.yaml
tools/thread-puller/tests/: test_parse_titles.py  test_reference_match.py  test_shopify_extract.py
tools/thread-puller/thread_puller/: cli.py  config.py  fetch.py  models.py  normalize.py  parse.py  shopify.py  write_outputs.py
tools/thread-puller/thread_puller.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+109 files in other folders)
