[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thread-puller"
version = "0.1.0"
description = "Needle Minder catalog scraper and normalizer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "httpx>=0.28.1",
  "lxml>=5.3.0",
  "pydantic>=2.10.0",
  "PyYAML>=6.0.2",
  "typer>=0.15.1"
]

[project.optional-dependencies]
dev = ["pytest>=8.3.4"]

[project.scripts]
thread-puller = "thread_puller.cli:app"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["thread_puller*"]
